# microbial-trait-ontology

./: #pyproject.toml#  .#pyproject.toml  .cruft.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml  qc.yml
data/: microtrait_traits.txt  microtraits.obo
docs/: conf.py  index.rst
src/microbial_trait_ontology/: __init__.py  cli.py
src/microbial_trait_ontology/datamodel/: microtrait.py  microtrait.py.old  microtrait.yaml
src/microbial_trait_ontology/etl/: ingest_microtrait.py
tests/: __init__.py  demo_test.py
tests/input/: microtraits_subset.tsv
tests/test_sources/: test_microtrait.py
