[tool.poetry]
name = "microbial-trait-ontology"
version = "0.0.0"
description = "microbial-trait-ontology"
authors = ["Author 1 <author@org.org>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "*"
pydantic = "^1.10.7"
linkml-runtime = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
tox = "^3.25.1"
importlib_metadata = "*"

[tool.poetry.scripts]
microbial-trait-ontology = "microbial_trait_ontology.cli:main"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser"
    ]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
